--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 -e git+https://github.com/hammerheadlemon/datamaps#egg=datamaps
 -e git+https://github.com/banillie/projectlibrary#egg=projectlibrary
+docx==0.2.4
