updating requirements with correct python-docx library! various hacking changes to project summary dashboard to get into a working state quickly, but not yet tested

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 -e git+https://github.com/hammerheadlemon/datamaps#egg=datamaps
 -e git+https://github.com/banillie/projectlibrary#egg=projectlibrary
-docx==0.2.4
+python-docx==0.8.10
+
