adding openpyxl to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -e git+https://github.com/hammerheadlemon/datamaps#egg=datamaps
 -e git+https://github.com/banillie/projectlibrary#egg=projectlibrary
 python-docx==0.8.10
+openpyxl==3.0.0
 
