edit to datamaps

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-datamaps>=1.0.0
+datamaps
 -e git+https://github.com/banillie/projectlibrary#egg=projectlibrary
 python-docx==0.8.10
 openpyxl==3.0.0
