--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ datamaps
 -e git+https://github.com/banillie/projectlibrary#egg=projectlibrary
 python-docx==0.8.10
 openpyxl==3.0.0
-matplotlib
+matplotlib==3.0.0
 pdbpp==0.10.2
 pytest==5.4.1
