update to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,23 @@ live.db
 other/create_test_files.py
 .idea/
 **/.__pycache__/*
+*.~lock*
+.vscode/*
+.pytest_cache/
+htmlcov/*
+pip-wheel-metadata/*
+prof/*
+tags
+skip-covered/
+.idea/
+dist/
+**/.mypy_cache/*
+**/__pycache__/*
+.ropeproject
+.tox
+.coverage
+build/
+**/#*
+**/*.egg-info/*:wq
+bcompiler_engine.egg-info
+.nox
